style: reset password css

--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -39,8 +39,8 @@
                 </form>
             </div>
             <div class="bg-400 text-center py-5 text-primary lg:h-[30%] lg:flex lg:flex-col lg:justify-center">
-                <p class="mb-2">Déjà un compte ? </p>
-                <a href="" class="underline underline-offset-2 hover:text-secondary duration-150">Connectez vous !</a>
+                <p class="mb-2">Pas de compte ? </p>
+                <a href={{ path ('sign_up') }} class="underline underline-offset-2 hover:text-secondary duration-150">Créez-en un !</a>
             </div>
         </div>
         <div class="hidden md:block image_login form_image"></div>
