--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -56,7 +56,7 @@
                     {{ form_end(form) }}
                     <div class="bg-400 text-center py-5 text-primary">
                         <p class="mb-2">Déjà un compte ? </p>
-                        <a href="" class="underline underline-offset-2 hover:text-secondary duration-150">Connectez vous !</a>
+                        <a href={{ path ('login') }} class="underline underline-offset-2 hover:text-secondary duration-150">Connectez vous !</a>
                     </div>
                 </div>
             </div>
