--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -1,9 +1,71 @@
-<h1>Hi!</h1>
 
-<p>To reset your password, please visit the following link</p>
 
-<a href="{{ url('app_reset_password', {token: resetToken.token}) }}">{{ url('app_reset_password', {token: resetToken.token}) }}</a>
+<div class="parent">
+    <div class="container">
+        <div class="logo">
+            <img src="https://127.0.0.1:8000/images/svg/logo-white.svg" alt="Logo Quai Antique en inscription avec des montagnes derrière.">
+        </div>
+        <h1>Bonjour,</h1>
+    
+        <p>Nous avons reçu une demande de réinitialisation de mot de passe pour votre compte sur notre site web le Quai Antique. <b>Si vous n'êtes pas à l'origine de cette demande, veuillez ignorer cet email.</b></p>
+    
+        <p>Pour réinitialiser votre mot de passe, veuillez cliquer sur le boutton suivant :</p>
+    
+        <a class="button" href="{{ url('app_reset_password', {token: resetToken.token}) }}">Changer votre mot de passe</a>
+    
+        <p>Ce lien expirera dans {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'messages') }}.</p>
 
-<p>This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.</p>
+        <p>Pour tout autre soucis, vous pouvez nous contacter par mail :<a href="mailto:"> lorem@ipsum.fr </a> ou téléphone : <a href="tel">+33 1 23 45 67 89</a>.
+    
+        <p>Cordialement,</p>
+    
+        <p>L'équipe du Quai Antique.</p>
+    </div>
+</div>
 
-<p>Cheers!</p>
+<style>
+.parent {
+    background : rgb(247,249,250);
+    padding : 24px;
+    font-size : 1.275rem;
+}
+.logo {
+    border-bottom: 1px solid #CCCCCC;
+    padding : 24px;
+    background : rgb(23, 21, 21);
+}
+img {
+    height : 100%;
+    max-height: 100px;
+    width: auto;
+}
+.container {
+    font-family : serif;
+    width: 100%;
+    background : #fff;
+}
+a {
+    white-space: nowrap;
+}
+.button {   
+    display : inline-block;
+    white-space: nowrap;
+    margin : 24px 0; 
+    background : rgb(23, 21, 21);
+    text-align: center;
+    padding : 14px 12px;
+    color : rgb(249, 246, 240);
+    text-decoration : none;
+    font-size : 1.275rem;
+}
+
+@media screen and (min-width : 768px) {
+    .parent {
+        transform: scale(0.741071, 0.741071);
+    }
+    .logo {
+        max-height : 125px;
+    }
+}
+
+</style>
