style: adding padding to different etapes

--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -31,7 +31,7 @@
                         <label >
                             <input class="mr-2" type="checkbox" name="_remember_me" checked/> Se souvenir de moi
                         </label>
-                        <a href={{ path('app_forgot_password_request') }} class="text-sm">Mot de passe oublié ?</a>
+                        <a href={{ path('app_forgot_password_request') }} class="text-sm hover:underline duration-75">Mot de passe oublié ?</a>
                     </div>
                     {# If you want to control the URL the user is redirected to on success
                     <input type="hidden" name="_target_path" value="/account"> #}
