--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="text-secondary font-secondary drop-shadow-lg max-w-[380px] mx-auto bg-500 w-11/12">
+    <div class="text-secondary font-secondary drop-shadow-lg max-w-[380px] mx-auto bg-500 w-11/12 p-4">
         {{ form_start(resetForm, {'attr' : { 'class' : 'p-4 grid gap-6'}}) }}
             <div class="form_container">
                 {{ form_label(resetForm.plainPassword.first) }}
