--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -314,6 +314,9 @@ header nav a.active::after {
 .image_login {
     background: center / cover no-repeat url('../../public/images/login/login-medium.jpg');
 }
+.reset_password_success {
+    
+}
 
 @media screen and (min-width: 768px) {
     footer, footer div:nth-child(2), footer div:nth-child(2) div {
