--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -19,6 +19,9 @@
                         <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
                     </span>
                 </div>
+                <div class="form_error">
+                    {{ form_errors(resetForm.plainPassword.first)}}
+                </div>
             </div>
             <div class="form_container">
                 {{ form_label(resetForm.plainPassword.second) }}
@@ -29,6 +32,9 @@
                         <i class="fa-solid fa-eye lala w-[36px]" ></i>
                         <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
                     </span>
+                </div>
+                <div class="form_error">
+                    {{ form_errors(resetForm.plainPassword.second)}}
                 </div>
             </div>
             <button class="bg-secondary text-primary mt-4 mb-2 py-2 px-4 w-fit justify-self-center hover:bg-400 duration-150 hover:text-secondary" type="submit">Réinitialiser le mot de passe</button>
