feat: notification password change

--- a/templates/Login/login.form.html.twig
+++ b/templates/Login/login.form.html.twig
@@ -5,6 +5,7 @@
     {% if (reset == 1) %} 
     <div class="reset_password_success">
         <p>Mot de passe modifié avec succès !</p>
+        <button class=" bg-secondary text-primary mt-4 rounded-full w-9 h-9 flex justify-center items-center justify-self-center hover:bg-400 duration-150 hover:text-secondary mx-auto" id="reset_success" onclick="closeResetPassword(event)"><i class="fa-solid fa-check"></i></button>
     </div>
     {% endif %}
     <div class="flex w-full">
