--- a/templates/Login/login.html.twig
+++ b/templates/Login/login.html.twig
@@ -16,6 +16,6 @@
     
 {% endblock %}
 {% block scripts %}
-<script src={{ asset('js/signUp-login/'~'script-eye.js') }}></script>
+<script src={{ asset('js/signUp-login/'~'script.js') }}></script>
 {% endblock %}
      
