--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -15,6 +15,6 @@
     </main>
 {% endblock %}
 {% block scripts %}
-<script src={{ asset('js/signUp-login/'~'script-eye.js') }}></script>
+<script src={{ asset('js/signUp-login/'~'script.js') }}></script>
 
 {% endblock %}
