--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -19,7 +19,7 @@
                     {{ form_widget(requestForm.email) }}
                 </div>
                 <div class="form_error">
-                    {{ form_error(requestForm.email)}}
+                    {{ form_errors(requestForm.email)}}
                 </div>
             </div>
             <div>
