style: changing font-size of email depending screen size

--- a/templates/reset_password/email.html.twig
+++ b/templates/reset_password/email.html.twig
@@ -27,7 +27,6 @@
 .parent {
     background : rgb(247,249,250);
     padding : 24px;
-    font-size : 1.275rem;
 }
 .logo {
     border-bottom: 1px solid #CCCCCC;
@@ -56,15 +55,18 @@ a {
     padding : 14px 12px;
     color : rgb(249, 246, 240);
     text-decoration : none;
-    font-size : 1.275rem;
 }
 
 @media screen and (min-width : 768px) {
     .parent {
         transform: scale(0.741071, 0.741071);
+        font-size : 1.275rem;
     }
     .logo {
         max-height : 125px;
+    }
+    .button {
+        font-size : 1.275rem;
     }
 }
 
