refactor: adding fr locale language

--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -8,7 +8,19 @@
         </h2>
     </div>
 {% endblock %}
-{% block content %}
+{% block content %} 
+    {% if error %}
+        <div>
+            {% if (error == 1062) %}
+            <p>Une erreur est survenue :</p>
+            <p>L'email que vous avez entré est déjà associé à un compte existant.</p>
+            {% else %}
+            <p>Une erreur est survenue.</p>
+            <p>Nous vous invitons à prendre contact directement avec nous.</p>
+            {% endif %}
+        </div>
+    {% endif %}
+    <div></div>
     <section class="my-8 md:my-12 flex md:max-w-[900px] w-11/12 mx-auto items-center ">
             <div class="flex w-full">
                 <div class="hidden md:block image_sign-up form_image"></div>
