--- a/templates/Card/Starter/starter.card.html.twig
+++ b/templates/Card/Starter/starter.card.html.twig
@@ -7,11 +7,11 @@
 {% block section %}
 <div class="main-content">
     <section class="" id="section-starter">
-        <div class="box"><img src={{ asset('images/svg/'~'Rectangle.svg') }} alt=""></img></div>
+        <div class="box"><img src={{ asset('/images/svg/'~'Rectangle.svg') }} alt=""></img></div>
         <div class="container-card blank">
             <div class="card_titles">
                 <h2 class="">Entrées</h2>
-                <img src={{ asset('images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
+                <img src={{ asset('/images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
             </div>
             <ul class="card-items">
                 <li>
@@ -43,5 +43,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src={{ asset('js/card/'~'script-options.js') }}></script>
+    <script src={{ asset('/js/card/'~'script-options.js') }}></script>
 {% endblock %}
