--- a/templates/Contact/contact.form.html.twig
+++ b/templates/Contact/contact.form.html.twig
@@ -10,10 +10,10 @@
     <div class="drop-shadow-lg font-third text-secondary mx-auto mb-12 md:w-11/12 md:flex md:max-w-[955px] mt-7">
         <section class="h-[315px] relative w-11/12 mx-auto flex md:h-auto">
             <picture>
-                <source srcset={{ asset('images/contact/'~"contact-extraLarge.jpg") }} media="(min-width : 1200px)">
-                <source srcset={{ asset('images/contact/'~"contact-large.jpg") }} media="(min-width : 990px)">
-                <source srcset={{ asset('images/contact/'~"contact-medium.jpg") }} media="(min-width : 768px)">
-                <img src={{ asset('images/contact/'~'contact-small.jpg')}} alt="Centre ville de Chambery avec la fontaine des éléphants." class="absolute h-full w-full object-cover object-center blur-[1px]">
+                <source srcset={{ asset('/images/contact/'~"contact-extraLarge.jpg") }} media="(min-width : 1200px)">
+                <source srcset={{ asset('/images/contact/'~"contact-large.jpg") }} media="(min-width : 990px)">
+                <source srcset={{ asset('/images/contact/'~"contact-medium.jpg") }} media="(min-width : 768px)">
+                <img src={{ asset('/images/contact/'~'contact-small.jpg')}} alt="Centre ville de Chambery avec la fontaine des éléphants." class="absolute h-full w-full object-cover object-center blur-[1px]">
             </picture>
             <div class="rounded bg-primary/50 drop-shadow-lg flex flex-col gap-5 p-4 w-3/4 max-w-[215px] m-auto">
                 <div class="flex gap-2">
