--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -33,10 +33,10 @@
                     <div class="carousel_image h-full w-full flex justify-center" id="carousel-2">
                         <div class="h-carousel-image relative group overflow-hidden">
                             <picture>
-                                <source srcset={{ asset('images/uploads/'~"coupe-des-montagnes-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset('images/uploads/'~"coupe-des-montagnes-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset('images/uploads/'~"coupe-des-montagnes-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('images/uploads/'~"coupe-des-montagnes-small.jpg") }} alt="Coupe de glace à la myrtille et mûres">
+                                <source srcset={{ asset('/images/uploads/'~"coupe-des-montagnes-extraLarge.jpg") }} media="(min-width : 1200px)">
+                                <source srcset={{ asset('/images/uploads/'~"coupe-des-montagnes-large.jpg") }} media="(min-width : 990px)">
+                                <source srcset={{ asset('/images/uploads/'~"coupe-des-montagnes-medium.jpg") }} media="(min-width : 768px)">
+                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('/images/uploads/'~"coupe-des-montagnes-small.jpg") }} alt="Coupe de glace à la myrtille et mûres">
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Coupe des montagnes</p></div>
                         </div>
@@ -44,10 +44,10 @@
                     <div class="carousel_image h-full w-full flex justify-center active" id="carousel-1">
                         <div class="h-carousel-image relative group overflow-hidden">
                             <picture>
-                                <source srcset={{ asset('images/uploads/'~"irish-coffee-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset('images/uploads/'~"irish-coffee-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset('images/uploads/'~"irish-coffee-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('images/uploads/'~"irish-coffee-small.jpg") }} alt="Plusieurs verres contenant du café" class="w-full">
+                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-extraLarge.jpg") }} media="(min-width : 1200px)">
+                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-large.jpg") }} media="(min-width : 990px)">
+                                <source srcset={{ asset('/images/uploads/'~"irish-coffee-medium.jpg") }} media="(min-width : 768px)">
+                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('/images/uploads/'~"irish-coffee-small.jpg") }} alt="Plusieurs verres contenant du café" class="w-full">
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Irish Coffee</p></div>
                         </div>
@@ -55,10 +55,10 @@
                     <div class="carousel_image h-full w-full flex justify-center" id="carousel-3">
                         <div class="h-carousel-image relative group overflow-hidden">
                             <picture>
-                                <source srcset={{ asset('images/uploads/'~"fondue-royale-extraLarge.jpg") }} media="(min-width : 1200px)">
-                                <source srcset={{ asset('images/uploads/'~"fondue-royale-large.jpg") }} media="(min-width : 990px)">
-                                <source srcset={{ asset('images/uploads/'~"fondue-royale-medium.jpg") }} media="(min-width : 768px)">
-                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('images/uploads/'~"fondue-royale-small.jpg") }} alt="Casserole de fondue rouge">
+                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-extraLarge.jpg") }} media="(min-width : 1200px)">
+                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-large.jpg") }} media="(min-width : 990px)">
+                                <source srcset={{ asset('/images/uploads/'~"fondue-royale-medium.jpg") }} media="(min-width : 768px)">
+                                <img class="h-full object-cover object-center drop-shadow-lg" src={{ asset('/images/uploads/'~"fondue-royale-small.jpg") }} alt="Casserole de fondue rouge">
                             </picture>
                             <div class="absolute bg-primary opacity-80 h-auto w-full top-full -translate-y-full text-center p-2 lg:h-20 lg:-translate-y-0 lg:group-hover:-translate-y-full lg:ease-in lg:duration-150"><p class="text-home-carousel lg:top-1/2 lg:relative lg:-translate-y-1/2">Fondue Royale</p></div>
                         </div>
