--- a/templates/SignUp/sign.html.twig
+++ b/templates/SignUp/sign.html.twig
@@ -6,7 +6,7 @@
     <main class="pt-28 flex flex-col justify-evenly" id="sign-up">
         <div class="title_container bg-primary">
             <h1 class="title_section">Inscription</h1>
-            <img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
+            <img src={{ asset('/images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
             {% block content_subtitle %}
             {% endblock %}
         </div>
@@ -15,6 +15,6 @@
     </main>
 {% endblock %}
 {% block scripts %}
-<script src={{ asset('js/signUp-login/'~'script.js') }}></script>
+<script src={{ asset('/js/signUp-login/'~'script.js') }}></script>
 
 {% endblock %}
