--- a/templates/Card/Dessert/dessert.card.html.twig
+++ b/templates/Card/Dessert/dessert.card.html.twig
@@ -5,12 +5,12 @@
 {% block section %}
 <div class="main-content">
     <section class="" id="section-starter">
-        <div class="box"><img src={{ asset('images/svg/'~'Rectangle.svg') }} alt=""></img></div>
+        <div class="box"><img src={{ asset('/images/svg/'~'Rectangle.svg') }} alt=""></img></div>
         <div class="container-card blank sm-cardButton:flex">
             <div class="pb-4">
                 <div class="card_titles">
                     <h2 class="">Desserts</h2>
-                    <img src={{ asset('images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
+                    <img src={{ asset('/images/svg/'~ "line-sub.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px] -mt-2 md:w-[150px]">
                 </div>
                 <ul class="card-items">
                     <li>
@@ -57,5 +57,5 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src={{ asset('js/card/'~'script-options.js') }}></script>
+    <script src={{ asset('/js/card/'~'script-options.js') }}></script>
 {% endblock %}
