--- a/templates/Contact/contact.html.twig
+++ b/templates/Contact/contact.html.twig
@@ -7,7 +7,7 @@
 	<main class="pt-28">
 		<div class="title_container">
 			<h1 class="title_section">Contact</h1>
-			<img src={{ asset('images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
+			<img src={{ asset('/images/svg/'~ "line-white.svg") }} alt="un point entouré de deux traits de longeur égales" class="w-[100px]">
 			{% block contact_title %}
 			{% endblock %}
 		</div>
