bug: changing from mail

--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -1,4 +1,4 @@
-{% extends 'signUp/sign.html.twig' %}
+{% extends 'SignUp/sign.html.twig' %}
 
 {% block content_subtitle %}
     <div class="font-secondary text-secondary text-center my-5 text-lg px-4 md:text-xl">
