--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -15,7 +15,7 @@
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.first) }}
                     <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye lala w-[36px]" ></i>
+                        <i class="fa-solid fa-eye w-[36px]" ></i>
                         <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
                     </span>
                 </div>
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-lock"></i>
                     {{ form_widget(resetForm.plainPassword.second) }}
                     <span role="button" onclick="togglePassword(event)">
-                        <i class="fa-solid fa-eye lala w-[36px]" ></i>
+                        <i class="fa-solid fa-eye  w-[36px]" ></i>
                         <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
                     </span>
                 </div>
