--- a/templates/SignUp/form/signUp.form.html.twig
+++ b/templates/SignUp/form/signUp.form.html.twig
@@ -44,7 +44,7 @@
                                 <i class="fa-solid fa-lock"></i>
                                 {{ form_widget(form.password) }}
                                 <span role="button" onclick="togglePassword(event)">
-                                    <i class="fa-solid fa-eye lala w-[36px]" ></i>
+                                    <i class="fa-solid fa-eye  w-[36px]" ></i>
                                     <i class="fa-solid fa-eye-slash hide w-[36px]"></i>
                                 </span>
                             </div>
