--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,11 @@
                         <li><a href="">Réserver</a></li>
                         <li><a href={{ path('contact') }}>Contact</a></li>
                         {% if app.user %}
-                        <li><a href={{ path('login') }}>Profil</a></li>
+                                {% if 'ROLE_ADMIN' in app.user.roles %}
+                                    <li><a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil', {'page': 'carousel'}) }}">Profil</a></li>
+                                {% else %}
+                                    <li><a class="hover:underline hover:underline-offset-2" href="">Profil</a></li>
+                                {% endif %}
                         <li><a href={{ path('logout') }}>Deconnexion</a></li>
                         {% else %}
                         <li><a href={{ path('login') }}>Connexion</a></li>
@@ -97,7 +101,11 @@
                                 <li><a class="hover:underline hover:underline-offset-2" href="">Réserver</a></li>
                                 <li><a class="hover:underline hover:underline-offset-2" href="">Contact</a></li>
                                 {% if app.user %}
-                                <li><a class="hover:underline hover:underline-offset-2" href="">Profil</a></li>
+                                    {% if app.user.roles == 'ROLE_ADMIN' %}
+                                    <li><a class="hover:underline hover:underline-offset-2" href="{{ path('admin_profil') }}">Profil</a></li>
+                                    {% else %}
+                                    <li><a class="hover:underline hover:underline-offset-2" href="">Profil</a></li>
+                                    {% endif %}
                                 <li><a class="hover:underline hover:underline-offset-2" href="">Deconnexion</a></li>
                                 {% else %}
                                 <li><a class="hover:underline hover:underline-offset-2" href="">Connexion</a></li>
